--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="main">
+        <h2>add</h2>
         <img class="earth" src="https://avatanplus.com/files/resources/original/57361521cd4a3154ab428c31.png" alt="">
         <img class="moon"  src="https://i.pinimg.com/originals/8f/69/96/8f6996678c4160032e8cb29e511117a4.png" alt="">
     </div>
